# thongcaobaochi

./: index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.css  App.tsx  api.ts  engines.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/prompts/: facebook.md  factsheet.md  press_release.md  seo.md  suggest_brief.md  vnexpress_style.md
src-tauri/prompts/samples/: SOURCES.md  mau-01-ket-qua-kinh-doanh.md  mau-02-cong-bo-chien-luoc.md  mau-03-tin-dau-tu.md  tcbc-mau-vf-mpv7.md  tcbc-mau-xanh-sm.md
src-tauri/src/: claude.rs  commands.rs  db.rs  embedded.rs  lib.rs  main.rs  prompts.rs
src/components/: Composer.tsx  History.tsx  RichEditor.tsx  Settings.tsx
src/lib/: md.ts
